cd C:\Users\Tibor\Dropbox\_SITE\tiborsimon.github.io

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -39,9 +39,9 @@ $info                : #308cbc;
 // Screen Size
 // --------------------------------------------------
 
-$small               : "only screen and (min-width: 30em)";
-$medium              : "only screen and (min-width: 48em)";
-$large               : "only screen and (min-width: 62.5em)";
+$small               : "only screen and (min-width: 500px)";
+$medium              : "only screen and (min-width: 700px)";
+$large               : "only screen and (min-width: 800px)";
 
 
 // Page Sizes
