--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -511,7 +511,7 @@ input#search-input:focus {
   border-radius: 6px;
 }
 
-#result-contailer .selected {
+.selected {
   background-color: yellow;
 }
 
