--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -509,15 +509,20 @@ input#search-input:focus {
   box-shadow: 0 1px 4px #555 inset;
   opacity: 0.8;
   border-radius: 6px;
+  overflow: hidden;
 }
 
 .selected {
-  background-color: yellow;
+  background-color: rgba(121, 127, 134, 0.49);
+  color: #FFF !important;
+  a {
+    color: #FFF !important;
+  }
 }
 
 .search-result-block-container{
   display: block;
-  padding: 20px 20px 0px;
+  padding: 9px 20px 10px;
 }
 
 .search-result-block-container:last-child {
