--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -520,13 +520,17 @@ input#search-input:focus {
   }
 }
 
+.search-result-block-container:first-child {
+  padding: 12px 20px 4px;
+}
+
 .search-result-block-container{
   display: block;
-  padding: 9px 20px 10px;
+  padding: 4px 20px 4px;
 }
 
 .search-result-block-container:last-child {
-  padding: 20px 20px;
+  padding: 4px 20px 12px;
 }
 
 .search-result-block-title{
