--- a/_sass/_gist.scss
+++ b/_sass/_gist.scss
@@ -2,11 +2,9 @@
   background-color: transparent !important;
   border: none !important;
   background-color: $base3;
-  -webkit-border-radius : 6px;
-  -moz-border-radius : 6px;
-  border-radius : 6px;
+  @include rounded(6px);
 }
- 
+
 .gist {
   ::-moz-selection {
     background-color: $selection-bg;
@@ -16,28 +14,28 @@
     background-color: $selection-bg;
     color: $selection-color;
   }
- 
+
+  td {
+    border-top: none;
+  }
+
   .highlight {
     border-collapse: separate;
     border-spacing: 0;
-    -webkit-border-radius : 6px;
-    -moz-border-radius : 6px;
-    border-radius : 6px;
-    -webkit-box-shadow : 0 2px 5px rgba(0, 0, 0, 0.09);
-    -moz-box-shadow : 0 2px 5px rgba(0, 0, 0, 0.09);
-    box-shadow : 0 2px 5px rgba(0, 0, 0, 0.09);
+    @include rounded(6px);
+    @include box-shadow(0 2px 5px rgba(0, 0, 0, 0.09));
     overflow: hidden;
     margin-bottom: 25px;
     border: 1px solid rgba(147, 161, 161, 0.55);
   }
- 
+
   .gist-data {
     overflow: visible !important;
     word-wrap: normal !important;
     background-color: transparent !important;
     border-bottom: none !important;
   }
- 
+
   .line-data {
     width: 602px;
     overflow: hidden;
@@ -46,7 +44,7 @@
       overflow: hidden;
     }
   }
- 
+
   .line-numbers {
     width: 38px;
     overflow: hidden;
@@ -59,7 +57,7 @@
       overflow: hidden;
     }
   }
- 
+
   .gist-meta {
     padding: 5px 40px !important;
     background-color: transparent !important;
@@ -68,7 +66,7 @@
       color: $gist-meta-color !important;
     }
   }
- 
+
   .highlight {
     font-size: 12px;
     color: $base01 !important;
