--- a/_includes/disqus_comments.html
+++ b/_includes/disqus_comments.html
@@ -1,5 +1,5 @@
 {% if site.disqus_shortname %}
-    <div id="discuss" />
+    <div id="discussion" />
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
         var disqus_shortname = '{{ site.disqus_shortname }}'; // required: replace example with your forum shortname
