--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -11,6 +11,14 @@
            });
        }
     });
+    
+    $('link').each(function(){
+      var $ele = $(this);
+    
+      if ( $ele.attr('href').search("gist-assets.github.com") > 0 ) {
+      	$ele.attr('href', '');
+      }
+    });
 </script>
 
 {% if site.google_analytics %}
