--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -47,7 +47,12 @@
         {% if page.modified %}<span>Updated on <span class="entry-date date updated"><time datetime="{{ page.modified }}">{{ page.modified | date: "%B %d, %Y" }}</time></span></span>
         <span class="author vcard"><span class="fn">{{ site.owner.name }}</span></span>{% endif %}
         {% if page.share != false %}{% include social-share.html %}{% endif %}
-        <div class="donation-box"><a href="http://tiborsimon.github.io/donation" target="_blank"><img src="http://tiborsimon.github.io/images/donate.png" /></a></div>
+        <div class="donation-box">
+         Did you like this article? If you find it useful, consider supporting Tibor's work
+with a small amount of donation. It’s a fact that engineers are fueled with coffee, so how about a cup of coffee?
+         <span class="entry-tags"><a href="http://tiborsimon.github.io/donation" target="_blank">DONATE</a></span>
+
+        <a href="http://tiborsimon.github.io/donation" target="_blank"><img src="http://tiborsimon.github.io/images/donate.png" /></a></div>
       </footer>
     </div><!-- /.entry-content -->
     {% if page.comments != false %}<section id="disqus_thread"></section><!-- /#disqus_thread -->{% endif %}
