--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -48,11 +48,8 @@
         <span class="author vcard"><span class="fn">{{ site.owner.name }}</span></span>{% endif %}
         {% if page.share != false %}{% include social-share.html %}{% endif %}
         <div class="donation-box">
-         Did you like this article? If you find it useful, consider supporting Tibor's work
-with a small amount of donation. It’s a fact that engineers are fueled with coffee, so how about a cup of coffee?
-         <span class="entry-tags"><a href="http://tiborsimon.github.io/donation" target="_blank">DONATE</a></span>
-
-        <a href="http://tiborsimon.github.io/donation" target="_blank"><img src="http://tiborsimon.github.io/images/donate.png" /></a></div>
+         Did you like this article? Was this information useful for you? If you find it useful, consider supporting Tibor's work with a small amount of donation. It’s a fact that engineers are fueled with coffee, so how about a cup of coffee?
+         <span class="entry-tags"><a class="tag" href="http://tiborsimon.github.io/donation" target="_blank">DONATE</a></span></div>
       </footer>
     </div><!-- /.entry-content -->
     {% if page.comments != false %}<section id="disqus_thread"></section><!-- /#disqus_thread -->{% endif %}
