--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -49,7 +49,7 @@
         {% if page.share != false %}{% include social-share.html %}{% endif %}
         <div class="donation-box">
          Did you like this article? Was this information useful for you? If you find it useful,<br>consider supporting Tibor's work with a small amount of donation.<br>It’s a fact that engineers are fueled with coffee, so how about a cup of coffee?
-         <a class="donation-button" href="http://tiborsimon.github.io/donation" target="_blank">DONATE</a>
+         <span><a class="donation-button" href="http://tiborsimon.github.io/donation" target="_blank">DONATE</a></span>
          </div>
       </footer>
     </div><!-- /.entry-content -->
