--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -48,8 +48,8 @@
         <span class="author vcard"><span class="fn">{{ site.owner.name }}</span></span>{% endif %}
         {% if page.share != false %}{% include social-share.html %}{% endif %}
         <div class="donation-box">
-         Did you like this article? Was this information useful for you? If you find it useful,<br>consider supporting Tibor's work with a small amount of donation.<br>It’s a fact that engineers are fueled with coffee, so how about a cup of coffee?
-         <span><a class="donation-button" href="http://tiborsimon.github.io/donation" target="_blank">DONATE</a></span>
+         Did you like this article? Was this information useful for you? If you find it useful, consider supporting Tibor's work with a small amount of donation. It’s a fact that engineers are fueled with coffee, so how about a cup of coffee?
+         <a class="donation-button" href="http://tiborsimon.github.io/donation" target="_blank">DONATE</a>
          </div>
       </footer>
     </div><!-- /.entry-content -->
