--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -583,8 +583,9 @@ td a {
 // --------------------------------------------------
 
 a.donation-button:hover {
-  background-color: rgb(228, 181, 33);
-}
+  background-color: #E5E327;
+  color: rgb(255, 255, 255);
+} 
 
 a.donation-button {
   display: block;
