--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -596,12 +596,12 @@ td a {
   padding: 3px;
 }
 
-donation-button-row:hover {
+.donation-button-row:hover {
   background-color: #E5E327;
   color: rgb(255, 255, 255);
 }
 
-donation-button-row {
+.donation-button-row {
   display: block;
   background-color: #b3b3b3;
   color: white;
