--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -600,7 +600,9 @@ td a {
   background-color: #fff;
   color: #009cde;
   border: solid 1px #009cde;
-  
+  background-image: url("http://tiborsimon.github.com/images/paypal-logo.png");
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .donation-button-row {
