--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -598,7 +598,7 @@ td a {
 
 .donation-button-row:hover {
   background-color: #fff;
-  color: #009cde;
+  color: rgba(0, 156, 222, 0);
   border: solid 1px #009cde;
   background-image: url("http://tiborsimon.github.com/images/paypal-logo.png");
   background-repeat: no-repeat;
