--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -583,15 +583,14 @@ td a {
 // --------------------------------------------------
 
 .donation-button:hover {
-  background-color: #E5A927;
-  color: rgb(255, 255, 255);
+  background-color: #003087;
 } 
 
 .donation-button {
   display: block;
   margin: 10px;
   background-color: #b3b3b3;
-  color: white;
+  color: white !important;
   @include rounded(3px);
   padding: 3px;
 }
