--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -69,3 +69,9 @@ $selection-bg        : $base2;
 $selection-color     : $base01;
 
 $gist-meta-color     : rgba(187,187,187,0.8)
+
+
+// Donation colors
+// --------------------------------------------------
+
+$donation-color      : #5175AD;
