--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -68,7 +68,7 @@ $cyan                : #2aa198;
 $selection-bg        : $base2;
 $selection-color     : $base01;
 
-$gist-meta-color     : rgba(187,187,187,0.8)
+$gist-meta-color     : rgba(187,187,187,0.8);
 
 
 // Donation colors
