--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -648,9 +648,10 @@ td a {
 
 .donor {
   float: left;
-  width: 20%;
+  width: 25%;
   padding: 0 1%;
   margin-bottom: 2%;
+  text-align: center;
 }
 
 .donor-link {
