--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -74,7 +74,7 @@ $blue:      #268bd2;
 $cyan:      #2aa198;
 $green:     #859900;
 
-@include setsolarized(dark);
+@include setsolarizedtodark();
  
 $selection-bg        : $base2;
 $selection-color     : $base01;
