--- a/_sass/_gist.scss
+++ b/_sass/_gist.scss
@@ -26,7 +26,7 @@
     @include box-shadow(0 2px 5px rgba(0, 0, 0, 0.09));
     overflow: hidden;
     margin-bottom: 25px;
-    border: 1px solid rgba(147, 161, 161, 0.55);
+    border: 1px solid $base1;
   }
 
   .gist-data {
@@ -52,7 +52,7 @@
     font-size: 100%;
     background: $base2 !important;
     padding-right: 6px;
-    color: #9da1a1;
+    color: $base1;
     pre {
       overflow: hidden;
     }
