--- a/_sass/_gist.scss
+++ b/_sass/_gist.scss
@@ -53,6 +53,7 @@
     background: $base2 !important;
     padding-right: 6px;
     color: $base1;
+    border: none;
     pre {
       overflow: hidden;
     }
