--- a/_sass/_gist.scss
+++ b/_sass/_gist.scss
@@ -52,7 +52,7 @@
     font-size: 100%;
     background: $base2 !important;
     padding-right: 6px;
-    color: $base1;
+    color: $base1 !important;
     border: none !important;
     pre {
       overflow: hidden;
