--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -97,8 +97,8 @@ $blue:      #d9742d;
 $cyan:      #d55e67;
 $green:     #7a66ff;
  
-$selection-bg        : $magenta;
-$selection-color     : $base0;
+$selection-bg        : $yellow;
+$selection-color     : $base3;
 
 
 $gist-meta-color     : rgba(116, 112, 112, 0.8);
