--- a/_sass/_gist.scss
+++ b/_sass/_gist.scss
@@ -62,9 +62,9 @@
   .gist-meta {
     padding: 5px 40px !important;
     background-color: transparent !important;
-    color: $gist-gist-meta-color !important;
+    color: $gist-meta-color !important;
     a {
-      color: $gist-gist-meta-color !important;
+      color: $gist-meta-color !important;
     }
   }
 
