--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -74,8 +74,8 @@ $gist-blue             : #268bd2;
 $gist-cyan             : #2aa198;
 $gist-green            : #859900;
 
-$gist-selection-bg     : $base2;
-$gist-selection-color  : $base01;
+$gist-selection-bg     : $gist-red;
+$gist-selection-color  : $gist-base2;
 $gist-border-color     : #d3d3d3;
 $gist-meta-color       : rgba(187,187,187,0.8);
 
@@ -97,8 +97,8 @@ $gist-meta-color       : rgba(187,187,187,0.8);
 // $gist-cyan:      #d55e67;
 // $gist-green:     #7a66ff;
 //  
-// $gist-selection-bg        : $red;
-// $gist-selection-color     : $base2;
+// $gist-selection-bg        : $gist-red;
+// $gist-selection-color     : $gist-base2;
 // $gist-border-color     : #93a1a1;
 // $gist-meta-color     : rgba(116, 112, 112, 0.8);
 
