--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -77,7 +77,7 @@ $gist-green            : #859900;
 $gist-selection-bg     : $gist-red;
 $gist-selection-color  : $gist-base2;
 $gist-border-color     : #d3d3d3;
-$gist-meta-color       : rgba(187,187,187,0.8);
+$gist-meta-color       : rgba(187, 187, 187, 0.8);
 
 // $gist-base03:    #fdf6e3;
 // $gist-base02:    #eee8d5;
