--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -56,28 +56,28 @@ $header-height       : 300px;
 // Syntax highlight color variables
 // --------------------------------------------------
 
-$gist-base03           : #002b36;
-$gist-base02           : #073642;
-$gist-base01           : #586e75;
-$gist-base00           : #657b83;
-$gist-base0            : #839496;
-$gist-base1            : #93a1a1;
-$gist-base2            : #eee8d5;
-$gist-base3            : #fdf6e3;
+$base03           : #002b36;
+$base02           : #073642;
+$base01           : #586e75;
+$base00           : #657b83;
+$base0            : #839496;
+$base1            : #93a1a1;
+$base2            : #eee8d5;
+$base3            : #fdf6e3;
 
-$gist-yellow           : #b58900;
-$gist-orange           : #cb4b16;
-$gist-red              : #dc322f;
-$gist-magenta          : #d33682;
-$gist-violet           : #6c71c4;
-$gist-blue             : #268bd2;
-$gist-cyan             : #2aa198;
-$gist-green            : #859900;
+$yellow           : #b58900;
+$orange           : #cb4b16;
+$red              : #dc322f;
+$magenta          : #d33682;
+$violet           : #6c71c4;
+$blue             : #268bd2;
+$cyan             : #2aa198;
+$green            : #859900;
 
-$gist-selection-bg     : $gist-red;
-$gist-selection-color  : $gist-base2;
-$gist-border-color     : #d3d3d3;
-$gist-meta-color       : rgba(187, 187, 187, 0.8);
+$selection-bg     : $red;
+$selection-color  : $base2;
+$border-color     : #d3d3d3;
+$meta-color       : rgba(187, 187, 187, 0.8);
 
 // $gist-base03:    #fdf6e3;
 // $gist-base02:    #eee8d5;
