--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -74,9 +74,9 @@ $blue:      #268bd2;
 $cyan:      #2aa198;
 $green:     #859900;
 
-$selection-bg        : $base2;
-$selection-color     : $base01;
-
+$selection-bg        : $red;
+$selection-color     : $base2;
+$gist-border-color   : #d3d3d3;
 $gist-meta-color     : rgba(187,187,187,0.8);
 
 // $base03:    #fdf6e3;
