CSS poke around

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -96,7 +96,7 @@ $gist-meta-color     : rgba(187,187,187,0.8);
 // $blue:      #d9742d;
 // $cyan:      #d55e67;
 // $green:     #7a66ff;
-//  
+// $gist-border-color   : #base1;
 // $selection-bg        : $red;
 // $selection-color     : $base2;
 // 
