--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -74,8 +74,8 @@ $gist-blue:      #268bd2;
 $gist-cyan:      #2aa198;
 $gist-green:     #859900;
 
-$gist-selection-bg        : $gist-red;
-$gist-selection-color     : $gist-base2;
+$gist-select-bg        : $gist-red;
+$gist-select-color     : $gist-base2;
 $gist-border-color   : #d3d3d3;
 $gist-meta-color     : rgba(187,187,187,0.8);
 
