--- a/_sass/_gist.scss
+++ b/_sass/_gist.scss
@@ -1,18 +1,18 @@
 .gist .gist-file {
   background-color: transparent !important;
   border: none !important;
-  background-color: $gist-base3;
+  background-color: $base3;
   @include rounded(6px);
 }
 
 .gist {
   ::-moz-selection {
-    background-color: $gist-select-bg;
-    color: $gist-select-color;
+    background-color: $selection-bg;
+    color: $selection-color;
   }
   ::selection {
-    background-color: $gist-select-bg;
-    color: $gist-select-color;
+    background-color: $selection-bg;
+    color: $selection-color;
   }
 
   td {
@@ -50,9 +50,9 @@
     overflow: hidden;
     text-align: right;
     font-size: 100%;
-    background: $gist-base2 !important;
+    background: $base2 !important;
     padding-right: 6px;
-    color: $gist-base1 !important;
+    color: $base1 !important;
     border: none !important;
     pre {
       overflow: hidden;
@@ -70,80 +70,80 @@
 
   .highlight {
     font-size: 12px;
-    color: $gist-base01 !important;
-    background-color: $gist-base3 !important;
+    color: $base01 !important;
+    background-color: $base3 !important;
     pre {
         padding-left: 6px;
     }
-    .hhl { background-color: $gist-base3 !important }
-    .lineno { color: $gist-base1 !important} /* Line Numbers */
-    .c  { color: $gist-base1 !important} /* Comment */
-    .cm { color: $gist-base1 !important} /* Comment.Multiline */
-    .c1 { color: $gist-base1 !important} /* Comment.Single */
-    .sb { color: $gist-base1 !important} /* Literal.String.Backtick */
-    .err{ color: $gist-base01 !important} /* Error */
-    .g  { color: $gist-base01 !important} /* Generic */
-    .l  { color: $gist-base01 !important} /* Literal */
-    .n, .pl-mp, .pl-vpf  { color: $gist-base01 !important} /* Name */
-    .p  { color: $gist-base01 !important} /* Punctuation */
-    .ge { color: $gist-base01; font-style: italic !important} /* Generic.Emph */
-    .go { color: $gist-base01 !important} /* Generic.Output */
-    .gp { color: $gist-base01 !important} /* Generic.Prompt */
-    .gs { color: $gist-base01; font-weight: bold !important} /* Generic.Strong */
-    .gt { color: $gist-base01 !important} /* Generic.Traceback */
-    .ld { color: $gist-base01 !important} /* Literal.Date */
-    .na { color: $gist-base01 !important} /* Name.Attribute */
-    .nl { color: $gist-base01 !important} /* Name.Label */
-    .nn { color: $gist-base01 !important} /* Name.Namespace */
-    .py { color: $gist-base01 !important} /* Name.Property */
-    .nx { color: $gist-base01 !important} /* Name.Other */
-    .w  { color: $gist-base01 !important} /* Text.Whitespace */
-    .sd { color: $gist-base01 !important} /* Literal.String.Doc */
-    .sh { color: $gist-base01 !important} /* Literal.String.Heredoc */
-    .cp { color: $gist-green !important} /* Comment.Preproc */
-    .cs { color: $gist-green !important} /* Comment.Special */
-    .o, .pl-k  { color: $gist-green !important} /* Operator */
-    .gi { color: $gist-green !important} /* Generic.Inserted */
-    .k, .pl-sc, .pl-st { color: $gist-green !important} /* Keyword */
-    .kn, .pl-k { color: $gist-green !important} /* Keyword.Namespace */
-    .kp { color: $gist-green !important} /* Keyword.Pseudo */
-    .ow { color: $gist-green !important} /* Operator.Word */
-    .nb, .pl-s3 { color: $gist-yellow !important} /* Name.Builtin */
-    .gu { color: $gist-orange !important} /* Generic.Subheading */
-    .ni { color: $gist-orange !important} /* Name.Entity */
-    .x  { color: $gist-orange !important} /* Other */
-    .ne { color: $gist-orange !important} /* Name.Exception */
-    .gh { color: $gist-orange !important} /* Generic.Heading */
-    .no { color: $gist-orange !important} /* Name.Constant */
-    .kc { color: $gist-orange !important} /* Keyword.Constant */
-    .se { color: $gist-orange !important} /* Literal.String.Escape */
-    .gr { color: $gist-red !important} /* Generic.Error */
-    .kt { color: $gist-red !important} /* Keyword.Type */
-    .sr { color: $gist-red !important} /* Literal.String.Regex */
-    .kd { color: $gist-blue !important} /* Keyword.Declaration */
-    .kr { color: $gist-blue !important} /* Keyword.Reserved */
-    .nc, .pl-e { color: $gist-blue !important} /* Name.Class */
-    .nd { color: $gist-blue !important} /* Name.Decorator */
-    .nf, .pl-en { color: $gist-blue !important} /* Name.Function */
-    .bp, .pl-c1, .pl-v, .pl-vpf { color: $gist-blue !important} /* Name.Builtin.Pseudo */
-    .nt, .pl-ent, .pl-vo { color: $gist-blue !important} /* Name.Tag */
-    .nv { color: $gist-blue !important} /* Name.Variable */
-    .vc { color: $gist-blue !important} /* Name.Variable.Class */
-    .vi { color: $gist-blue !important} /* Name.Variable.Instance */
-    .vg { color: $gist-blue !important} /* Name.Variable.Global */
-    .gd { color: $gist-cyan !important} /* Generic.Deleted */
-    .m, .pl-c1  { color: $gist-cyan !important} /* Literal.Number */
-    .s, .pl-s1, .pl-pds  { color: $gist-cyan !important} /* Literal.String */
-    .mf { color: $gist-cyan !important} /* Literal.Number.Float */
-    .mh { color: $gist-cyan !important} /* Literal.Number.Hex */
-    .mi, .pl-c1 { color: $gist-cyan !important} /* Literal.Number.Integer */
-    .mo { color: $gist-cyan !important} /* Literal.Number.Oct */
-    .sc { color: $gist-cyan !important} /* Literal.String.Char */
-    .s2 { color: $gist-cyan !important} /* Literal.String.Double */
-    .si { color: $gist-cyan !important} /* Literal.String.Interpol */
-    .sx { color: $gist-cyan !important} /* Literal.String.Other */
-    .s1 { color: $gist-cyan !important} /* Literal.String.Single */
-    .ss { color: $gist-cyan !important} /* Literal.String.Symbol */
-    .il { color: $gist-cyan !important} /* Literal.Number.Integer.Long */
+    .hhl { background-color: $base3 !important }
+    .lineno { color: $base1 !important} /* Line Numbers */
+    .c  { color: $base1 !important} /* Comment */
+    .cm { color: $base1 !important} /* Comment.Multiline */
+    .c1 { color: $base1 !important} /* Comment.Single */
+    .sb { color: $base1 !important} /* Literal.String.Backtick */
+    .err{ color: $base01 !important} /* Error */
+    .g  { color: $base01 !important} /* Generic */
+    .l  { color: $base01 !important} /* Literal */
+    .n, .pl-mp, .pl-vpf  { color: $base01 !important} /* Name */
+    .p  { color: $base01 !important} /* Punctuation */
+    .ge { color: $base01; font-style: italic !important} /* Generic.Emph */
+    .go { color: $base01 !important} /* Generic.Output */
+    .gp { color: $base01 !important} /* Generic.Prompt */
+    .gs { color: $base01; font-weight: bold !important} /* Generic.Strong */
+    .gt { color: $base01 !important} /* Generic.Traceback */
+    .ld { color: $base01 !important} /* Literal.Date */
+    .na { color: $base01 !important} /* Name.Attribute */
+    .nl { color: $base01 !important} /* Name.Label */
+    .nn { color: $base01 !important} /* Name.Namespace */
+    .py { color: $base01 !important} /* Name.Property */
+    .nx { color: $base01 !important} /* Name.Other */
+    .w  { color: $base01 !important} /* Text.Whitespace */
+    .sd { color: $base01 !important} /* Literal.String.Doc */
+    .sh { color: $base01 !important} /* Literal.String.Heredoc */
+    .cp { color: $green !important} /* Comment.Preproc */
+    .cs { color: $green !important} /* Comment.Special */
+    .o, .pl-k  { color: $green !important} /* Operator */
+    .gi { color: $green !important} /* Generic.Inserted */
+    .k, .pl-sc, .pl-st { color: $green !important} /* Keyword */
+    .kn, .pl-k { color: $green !important} /* Keyword.Namespace */
+    .kp { color: $green !important} /* Keyword.Pseudo */
+    .ow { color: $green !important} /* Operator.Word */
+    .nb, .pl-s3 { color: $yellow !important} /* Name.Builtin */
+    .gu { color: $orange !important} /* Generic.Subheading */
+    .ni { color: $orange !important} /* Name.Entity */
+    .x  { color: $orange !important} /* Other */
+    .ne { color: $orange !important} /* Name.Exception */
+    .gh { color: $orange !important} /* Generic.Heading */
+    .no { color: $orange !important} /* Name.Constant */
+    .kc { color: $orange !important} /* Keyword.Constant */
+    .se { color: $orange !important} /* Literal.String.Escape */
+    .gr { color: $red !important} /* Generic.Error */
+    .kt { color: $red !important} /* Keyword.Type */
+    .sr { color: $red !important} /* Literal.String.Regex */
+    .kd { color: $blue !important} /* Keyword.Declaration */
+    .kr { color: $blue !important} /* Keyword.Reserved */
+    .nc, .pl-e { color: $blue !important} /* Name.Class */
+    .nd { color: $blue !important} /* Name.Decorator */
+    .nf, .pl-en { color: $blue !important} /* Name.Function */
+    .bp, .pl-c1, .pl-v, .pl-vpf { color: $blue !important} /* Name.Builtin.Pseudo */
+    .nt, .pl-ent, .pl-vo { color: $blue !important} /* Name.Tag */
+    .nv { color: $blue !important} /* Name.Variable */
+    .vc { color: $blue !important} /* Name.Variable.Class */
+    .vi { color: $blue !important} /* Name.Variable.Instance */
+    .vg { color: $blue !important} /* Name.Variable.Global */
+    .gd { color: $cyan !important} /* Generic.Deleted */
+    .m, .pl-c1  { color: $cyan !important} /* Literal.Number */
+    .s, .pl-s1, .pl-pds  { color: $cyan !important} /* Literal.String */
+    .mf { color: $cyan !important} /* Literal.Number.Float */
+    .mh { color: $cyan !important} /* Literal.Number.Hex */
+    .mi, .pl-c1 { color: $cyan !important} /* Literal.Number.Integer */
+    .mo { color: $cyan !important} /* Literal.Number.Oct */
+    .sc { color: $cyan !important} /* Literal.String.Char */
+    .s2 { color: $cyan !important} /* Literal.String.Double */
+    .si { color: $cyan !important} /* Literal.String.Interpol */
+    .sx { color: $cyan !important} /* Literal.String.Other */
+    .s1 { color: $cyan !important} /* Literal.String.Single */
+    .ss { color: $cyan !important} /* Literal.String.Symbol */
+    .il { color: $cyan !important} /* Literal.Number.Integer.Long */
   }
 }
