--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -56,7 +56,7 @@ $header-height       : 300px;
 // Syntax highlight color variables
 // --------------------------------------------------
 
-$base03:    #002b36;
+$gist-base03:    #002b36;
 $base02:    #073642;
 $base01:    #586e75;
 $base00:    #657b83;
@@ -79,7 +79,7 @@ $selection-color     : $base2;
 $gist-border-color   : #d3d3d3;
 $gist-meta-color     : rgba(187,187,187,0.8);
 
-// $base03:    #fdf6e3;
+// $gist-base03:    #fdf6e3;
 // $base02:    #eee8d5;
 // $base01:    #93a1a1;
 // $base00:    #839496;
