--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -57,8 +57,8 @@ $header-height       : 300px;
 // --------------------------------------------------
 
 $gist-base03:    #002b36;
-$base02:    #073642;
-$base01:    #586e75;
+$gist-base02:    #073642;
+$gist-base01:    #586e75;
 $base00:    #657b83;
 $base0:     #839496;
 $base1:     #93a1a1;
@@ -80,8 +80,8 @@ $gist-border-color   : #d3d3d3;
 $gist-meta-color     : rgba(187,187,187,0.8);
 
 // $gist-base03:    #fdf6e3;
-// $base02:    #eee8d5;
-// $base01:    #93a1a1;
+// $gist-base02:    #eee8d5;
+// $gist-base01:    #93a1a1;
 // $base00:    #839496;
 // $base0:     #657b83;
 // $base1:     #586e75;
