--- a/_sass/_gist.scss
+++ b/_sass/_gist.scss
@@ -108,7 +108,7 @@
     .kn, .pl-k { color: $green !important} /* Keyword.Namespace */
     .kp { color: $green !important} /* Keyword.Pseudo */
     .ow { color: $green !important} /* Operator.Word */
-    .nb, .pl-s3 { color: $yellow !important} /* Name.Builtin */
+    .nb, .pl-s3 { color: $gist-yellow !important} /* Name.Builtin */
     .gu { color: $orange !important} /* Generic.Subheading */
     .ni { color: $orange !important} /* Name.Entity */
     .x  { color: $orange !important} /* Other */
