--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -63,9 +63,9 @@ $gist-base00:    #657b83;
 $gist-base0:     #839496;
 $gist-base1:     #93a1a1;
 $gist-base2:     #eee8d5;
-$gits-base3:     #fdf6e3;
+$gist-base3:     #fdf6e3;
 
-$yellow:    #b58900;
+$gist-yellow:    #b58900;
 $orange:    #cb4b16;
 $red:       #dc322f;
 $magenta:   #d33682;
@@ -86,9 +86,9 @@ $gist-meta-color     : rgba(187,187,187,0.8);
 // $gist-base0:     #657b83;
 // $gist-base1:     #586e75;
 // $gist-base2:     #073642;
-// $gits-base3:     #002b36;
+// $gist-base3:     #002b36;
 // 
-// $yellow:    #4a76ff;
+// $gist-yellow:    #4a76ff;
 // $orange:    #34b4e9;
 // $red:       #23cdd0;
 // $magenta:   #2cc97d;
