--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -122,7 +122,7 @@ blockquote {
     margin-top: 65px;
     border-top: solid 1px #ccc;
     opacity: 0.8;
-    
+
     ol, li, p {
         font-size: 10pt;
         line-height: 15px;
@@ -143,7 +143,7 @@ li {
         margin: 0 2px;
         padding: 0 5px;
         border: 1px solid lighten($black, 90);
-        background-color: $base3;
+        background-color: $gist-base3;
         @include rounded(3px);
     }
 }
