--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -65,7 +65,7 @@ $gist-base1:     #93a1a1;
 $gist-base2:     #eee8d5;
 $gist-base3:     #fdf6e3;
 
-$yellow:    #b58900;
+$gist-yellow:    #b58900;
 $orange:    #cb4b16;
 $red:       #dc322f;
 $magenta:   #d33682;
