--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -66,7 +66,7 @@ $gist-base2:     #eee8d5;
 $gist-base3:     #fdf6e3;
 
 $gist-yellow:    #b58900;
-$orange:    #cb4b16;
+$gist-orange:    #cb4b16;
 $red:       #dc322f;
 $magenta:   #d33682;
 $violet:    #6c71c4;
