--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -67,14 +67,14 @@ $gist-base3:     #fdf6e3;
 
 $gist-yellow:    #b58900;
 $gist-orange:    #cb4b16;
-$red:       #dc322f;
+$gist-gist-red:       #dc322f;
 $magenta:   #d33682;
 $violet:    #6c71c4;
 $blue:      #268bd2;
 $cyan:      #2aa198;
 $green:     #859900;
 
-$selection-bg        : $red;
+$selection-bg        : $gist-red;
 $selection-color     : $gist-base2;
 $gist-border-color   : #d3d3d3;
 $gist-meta-color     : rgba(187,187,187,0.8);
@@ -88,16 +88,16 @@ $gist-meta-color     : rgba(187,187,187,0.8);
 // $gist-base2:     #073642;
 // $gist-base3:     #002b36;
 // 
-// $yellow:    #4a76ff;
-// $orange:    #34b4e9;
-// $red:       #23cdd0;
+// $gist-yellow:    #4a76ff;
+// $gist-orange:    #34b4e9;
+// $gist-red:       #23cdd0;
 // $magenta:   #2cc97d;
 // $violet:    #938e3b;
 // $blue:      #d9742d;
 // $cyan:      #d55e67;
 // $green:     #7a66ff;
 // $gist-border-color   : #base1;
-// $selection-bg        : $red;
+// $selection-bg        : $gist-red;
 // $selection-color     : $gist-base2;
 // 
 // $gist-meta-color     : rgba(116, 112, 112, 0.8);
