--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -67,7 +67,7 @@ $gist-base3:     #fdf6e3;
 
 $gist-yellow:    #b58900;
 $gist-orange:    #cb4b16;
-$gist-gist-red:       #dc322f;
+$gist-red:       #dc322f;
 $magenta:   #d33682;
 $violet:    #6c71c4;
 $blue:      #268bd2;
