--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -68,9 +68,9 @@ $gist-base3:     #fdf6e3;
 $gist-yellow:    #b58900;
 $gist-orange:    #cb4b16;
 $gist-red:       #dc322f;
-$magenta:   #d33682;
-$violet:    #6c71c4;
-$blue:      #268bd2;
+$gist-magenta:   #d33682;
+$gist-violet:    #6c71c4;
+$gist-blue:      #268bd2;
 $cyan:      #2aa198;
 $green:     #859900;
 
@@ -91,9 +91,9 @@ $gist-meta-color     : rgba(187,187,187,0.8);
 // $gist-yellow:    #4a76ff;
 // $gist-orange:    #34b4e9;
 // $gist-red:       #23cdd0;
-// $magenta:   #2cc97d;
-// $violet:    #938e3b;
-// $blue:      #d9742d;
+// $gist-magenta:   #2cc97d;
+// $gist-violet:    #938e3b;
+// $gist-blue:      #d9742d;
 // $cyan:      #d55e67;
 // $green:     #7a66ff;
 // $gist-border-color   : #base1;
